finished game mostly, finshed all levels, and pause button and numerous bugs, lacks namespacing

--- a/css/style.css
+++ b/css/style.css
@@ -27,9 +27,6 @@ section.board {
   margin-top: 5%;
   margin-bottom: 30px;
   text-align: center;
-  /*top:50%;
-  left: 50%;
-  margin: -15% 0 0 -25%;*/
 }
 section.board div.instructions{
   position: absolute;
@@ -38,24 +35,27 @@ section.board div.instructions{
   background: white;
   color:black;
   width:50%;
-  height:70%;
+  height:88%;
   left:25%;
-  top:15%;
+  top:6%;
   margin: 0 auto;
   opacity: 0;
 }
 div.instructions img{
-  width:150px;
-  height:150px;
+  width:190px;
+  margin-bottom: 20px;
 }
 section.board div.instructions div {
   background:;
   font-size: 18px;
   display:inline-block;
-  margin: 10px;
-  margin-top: 50px;
+  margin: 5px;
+  margin-top: 40px;
 }
-
+section.board div.instructions h2 {
+  font-size: 20px;
+  margin-top: 60px;
+}
 section.belowBoard {
   position: relative;
   display: block;
@@ -84,10 +84,6 @@ section.belowBoard div{
   background:;
   display:inline-block;
 }
-/*div.gameBoard {
-  background: black;
-  width: 80%;
-}*/
 
 ul.block {
   background: #e8e8e8;
@@ -116,7 +112,7 @@ li.cell.foodEaten {
   opacity: 1;
 }
 li.cell.food {
-  background: #400080;
+  background: #5732db;
   opacity: 1;
 }
 
